# paper-recommendation

./: main.py  pyproject.toml  test.ipynb
crawler/: __init__.py  crawling.py  filtering.py  openreview_crawling.py  parsing.py  query.py
llm/: base_model.py  generater_research_cards.py  prompt_builder.py
test/: test_yeah.py
